bentoml/yatai/deployment/aws_ec2/sample_template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: "BentoML load balanced template template"

Parameters:
  AmazonLinux2LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  SecurityGroupResource:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "security group for bentoservice"
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 5000
          ToPort: 5000
        -
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22

  LaunchTemplateResource:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: template-manual-1
      #Key and security gorups remainign for logging in
      LaunchTemplateData:
        ImageId: !Ref AmazonLinux2LatestAmiId
        InstanceType: t2.micro
        UserData: "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSI9PU1ZQk9VTkRBUlk9PSIKCi0tPT1NWUJPVU5EQVJZPT0KQ29udGVudC1UeXBlOiB0ZXh0L2Nsb3VkLWNvbmZpZzsgY2hhcnNldD0idXMtYXNjaWkiCgpydW5jbWQ6CgotIHN1ZG8geXVtIHVwZGF0ZSAteQotIHN1ZG8gYW1hem9uLWxpbnV4LWV4dHJhcyBpbnN0YWxsIGRvY2tlciAteQotIHN1ZG8gc2VydmljZSBkb2NrZXIgc3RhcnQKLSBzdWRvIHVzZXJtb2QgLWEgLUcgZG9ja2VyIGVjMi11c2VyCi0gY3VybCAiaHR0cHM6Ly9hd3NjbGkuYW1hem9uYXdzLmNvbS9hd3NjbGktZXhlLWxpbnV4LXg4Nl82NC56aXAiIC1vICJhd3Njb [...]
        SecurityGroupIds:
          - !GetAtt SecurityGroupResource.GroupId
  
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: "0"
      MaxSize: "2"
      DesiredCapacity: "1"
      AvailabilityZones: !GetAZs
      LaunchTemplate: 
        LaunchTemplateId: !Ref LaunchTemplateResource
        Version: !GetAtt LaunchTemplateResource.LatestVersionNumber
